--- a/ly.html
+++ b/ly.html
@@ -7,27 +7,21 @@
    </tr>
    <tr>
     <td width="50%" align="right">Full Name:</td>
-    <td>ABC H. XYZ</td>
+    <td>Ly Vu Duc</td>
    </tr>
-   <tr>
-    <td align="right">Father's Name:</td>
-    <td>HIJ K. XYZ</td>
-   </tr>
+
    <tr>
     <td align="right">Age:</td>
-    <td>22 Years</td>
+    <td>25 Years</td>
    </tr>
    <tr>
     <td align="right">Date of Birth:</td>
-    <td>15<sup>th</sup> March</td>
+    <td>15<sup>th</sup> October</td>
    </tr>
-   <tr>
-    <td align="right">Religion:</td>
-    <td>PATEL</td>
-   </tr>
+
    <tr>
     <td align="right">Nationality:</td>
-    <td>Indian</td>
+    <td>Viet Name</td>
    </tr>
    <tr>
     <td colspan="2">Contact Details<hr/></td>
@@ -35,30 +29,30 @@
    <tr>
     <td align="right" valign="top">Address:</td>
     <td>B/7,"OM" Apt.</br>
-    Shyam Nagar,Nehru Road,</br>
-    Rajkot-360 00 2</td>
+    Via sommarive 9,</br>
+    Povo, Trento, Italy</td>
    </tr>
    <tr>
     <td align="right" valign="top">Phone Number:</td>
-    <td>(R)0281-235645</br>
-    (M)08167568749</td>
+    <td>
+    +39 389 554 5832</td>
    </tr>
    <tr>
     <td align="right">Email Address:</td>
-    <td>abc.xyz313@gmail.com</td>
+    <td>ducly.vu@unitn.it</td>
    </tr>
    <tr>
     <td colspan="2">Eduction & Knowledge<hr/></td>
    </tr>
    <tr>
     <td align="right">Language:</td>
-    <td>English, Hindi, Gujarati</td>
+    <td>English, Vietnamese</td>
    </tr><tr>
     <td align="right">Eduction:</td>
-    <td>B.C.A, Msc IT & CA</td>
+    <td>PhD student</td>
    </tr><tr>
     <td align="right">Other Knowledge:</td>
-    <td>Ms Office, Tally, Photoshop & Flash</td>
+    <td>Programming, Security, Machine learning</td>
    </tr><tr>
     <td align="right">Hobbies:</td>
     <td>Computer, Cricket, Travelling</td>
@@ -68,15 +62,15 @@
    </tr>
    <tr>
     <td align="right" valign="top">Work Experience:</td>
-    <td>(1)Lab Assistant at A.I.T.S of CE- 1 Year<br/>
-    (2)Head Teacher at GTS College - 2 Years & Continue
+    <td>Research assitant at the University of Trento<br/>
+   
     </td>
    </tr>
    <tr>
     <td colspan="2">About Me<hr/></td>
    </tr>
    <tr>
-    <td colspan="2">I am a hard working person.Teaching is my passion.Since years I have worked with students to help them sharpen their skills.<hr/></td>
+    <td colspan="2">I love malware analysis.<hr/></td>
    </tr>
   </table>
  </body>
