--- a/ly.html
+++ b/ly.html
@@ -28,8 +28,8 @@
    </tr>
    <tr>
     <td align="right" valign="top">Address:</td>
-    <td>B/7,"OM" Apt.</br>
-    Via sommarive 9,</br>
+    <td>
+    Via sommarive 9
     Povo, Trento, Italy</td>
    </tr>
    <tr>
