--- a/drawing.html
+++ b/drawing.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
 <html>
+ <head>
+  <script type="text/javascript">
+function functionOne() { alert('You clicked the top text'); }
+function functionTwo() { alert('You clicked the bottom text'); }
+  </script>
+ </head>
 <body>
-
-<svg height="210" width="500">
-  <polygon points="100,10 40,198 190,78 10,78 160,198" style="fill:lime;stroke:red;stroke-width:5;fill-rule:nonzero;"/>
-  Sorry, your browser does not support inline SVG.
-</svg>
-
-</body>
+ <p><a href="#" onClick="functionOne();">Top Text</a></p>
+ <p><a href="javascript:functionTwo();">Bottom Text</a></p>
+ </body>
 </html>
